--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
         .container {
             max-width: 600px;
             margin: auto;
-            /*
-            background-color: #fff;
-            padding: 20px;
-            border: 1px solid #ddd; */
-        }
+            background-color: #f5f5f5;
+            padding: 10px;
+              }
 
         .header {
             text-align: left;
